# dualsubstrate-commercial

./: .dockerignore  .env  .env.local  .gitignore  Cargo.toml  Dockerfile  Dockerfile.gateway  Makefile  README.md  README_MVP.md  buf.gen.yaml  buf.yaml  checksum.py  deps.py  docker-compose.gateway.yml  docker-compose.tls.yml  docker-compose.yml  fly.toml  go.mod  go.sum  jwt.key  jwt.pub  memory_governance.py  pyrightconfig.json  requirements-app.txt  requirements-local.txt  requirements.streamlit.txt  requirements.txt  s1_s2_memory.py  streamlit_audio_chat.py  streamlit_simple_audio.py
..streamlit/: config.toml
.codex/: manifest.yaml
.streamlit/: config.toml
api/: __init__.py  deps.py  grpc_server.py  ledger_manager.py  main.py  metrics.py  metrics_http.py  models.py  prime_schema.py  requirements.grpc.txt
app/: __init__.py
backend/: __init__.py  main.py
core/: Cargo.toml  __init__.py  automorphism.py  checksum.py  flow_rule_bridge.py  inference.py  ledger.py  msd_q4.py  rotate.py  scoring.py  valuation.py
core/routers/: __init__.py  score.py
core/src/: centroid.rs  lib.rs  msd.rs  python.rs  qp_encode.rs  registry.rs
core/storage/: __init__.py  rocksdb.py
demo_isolated/: app.py  routes_demo.py  token_prime.py
examples/: bench_neon.py  browser_demo.html
flow_rule/: Cargo.toml
notebooks/: dualsubstrate_demo.ipynb
ops/: Dockerfile  clean_workspace.py  docker-compose.yml  grafana_dash.json  local.sh
proto/: buf.yaml
sdk/python/: README.md  grpc_client.py  pyproject.toml  qp_memory.py
sdk/python/src/dualsubstrate_sdk/: __init__.py  api_client.py  grpc_client.py  http_models.py  qp_memory.py
services/: __init__.py  api.py
src/: gateway.rs
tests/: conftest.py  test_admin_ledgers_api.py  test_admin_reindex.py  test_api.py  test_automorphism.py  (+16 more)
(+184 files in other folders)
